test_suite/tests/ui/structure/function_type.stderr
error: mapping over function type is not supported
 --> tests/ui/structure/function_type.rs:4:16
  |
4 | struct Test<T>(fn(T));
  |                ^^^^^
